--- a/index.html
+++ b/index.html
@@ -3,11 +3,90 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Rock-Paper-Sissor</title>
 
-  <script src="index.js"></script>
+  <link rel="stylesheet" href="style.css">
+
+  <script src="./index.js" defer></script>
 </head>
 <body>
-  
+
+  <header>
+    <h1>Rock, Paper and Sissor</h1>
+  </header>
+  <main>
+    <div class="container">
+      <p class="historyText">The year is 2069 and only one thing can save the word...<br>You, armed with just your hands<br> you are the savior of humanity</p>
+      <button class="start">Let's Play</button>
+      <button class="playAgain hide">Again</button>
+
+      <div class="score hide">
+        <h4>Human: <span class="userScore">0</span></h4>
+        <h4>Computer: <span class="computerScore">0</span></h4>
+        <h4>Round: <span class="rounds">0</span></h5>
+      </div>
+
+      <div class="options hide">
+        <div class="rock">
+          <?xml version="1.0" encoding="utf-8"?>
+          <svg class ="rockButton" width="100px" height="100px" viewBox="0 0 64 64" id="Rock" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--emojione-monotone" preserveAspectRatio="xMidYMid meet"><path d="M61.971 42.634c-.632-6.334-2.045-11.643-2.358-25.352c-.223-9.706-12.006-10.453-15.069-7.164c-3.471-4.255-12.762-4.354-16.229.94c-2.693-1.48-9.901-1.799-12.879 1.873c0 0-8.835-1.411-12.836 13.321c-1.437 5.289.12 12.302.41 13.756c2.023 10.147 10.502 8.19 12.209 7.2c2.892 7.44 10.375 6.101 13.385 3.913c.174 4.414 3.771 6.535 6.065 5.699c6.722-2.451 12.33-2.783 16.764-2.607c2.127.083 3.797-.938 4.741-2.779c3.325-1.733 6.148-5.279 5.797-8.8m-15.525.998c1.008-5.798-1.179-14.392-.4-20.936c-3.16 4.926-.82 18.871-2.146 24.525c-1.085 4.62-9.646 3.175-12.294-2.375c-.918-8.487.424-13.407-1.889-22.15c.218 10.57-1.415 12.539-.325 22.813c-2.524 2.592-11.239.768-11.679-3.621c-.587-5.858.628-10.459-1.099-16.139c0 5.369-1.062 8.233-.541 16.18c.003.049-1.556 1.24-3.869 1.24c-9.471 0-8.646-14.027-7.087-18.926c2.256-7.098 8.207-11.233 11.281-9.611c1.527-3.561 10.239-3.875 11.74-.539c1.296-6.143 13.705-5.645 17.005-.166c2.214-4.44 12.358-3.112 12.464 3.388c.235 14.059 2.284 20.641 2.203 26.796c-3.471 4.281-9.605 3.902-13.364-.479" fill="#000000"></path></svg>
+        </div>
+        <div class="paper">
+          <?xml version="1.0" encoding="utf-8"?>
+          <svg class="paperButton" height="100px" width="100px" version="1.1" id="Paper" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+	        viewBox="0 0 512 512"  xml:space="preserve">
+          <g>
+	        <path class="st0" d="M416.585,50.544v-0.114h-3.686h-3.686v0.114c-2.044,0.132-4.063,0.378-6.042,0.723
+            c-5.162-26.003-28.153-45.66-55.648-45.66c-10.482,0-20.307,2.856-28.745,7.83C308.889,5.056,296.101,0,282.155,0
+            c-27.685,0-50.798,19.936-55.756,46.202c-3.998-0.894-8.15-1.37-12.41-1.37c-31.28,0-56.733,25.452-56.733,56.733v98.126
+            c-2.028-3.005-4.014-5.762-5.976-8.298c-5.54-7.075-10.489-12.09-16.178-16.424c-4.137-3.127-8.274-5.573-12.738-7.535
+            c-5.968-2.626-12.213-4.219-18.566-4.736c-1.535-0.131-3.128-0.197-4.704-0.197c-15.833,0-31.058,6.697-41.778,18.369
+            c-11.942,13.026-17.096,30.484-14.125,47.901c1.378,7.707,4.604,18.681,9.915,33.841c9.07,25.888,23.105,60.443,41.72,102.738
+            c19.174,43.461,47.615,81.184,82.268,109.1C206.708,498.317,248.954,512,293.014,512c78.238,0,141.684-42.066,165.578-109.773
+            c7.182-20.528,10.99-41.122,11.04-59.63v-5.704v-5.606V107.162C469.632,77.122,446.157,52.448,416.585,50.544z M293.014,478.38
+            c-36.008,0-71.113-10.998-94.826-30.107c-30.123-24.27-55.634-58.021-72.59-96.467c-21.89-49.74-34.014-81.053-40.761-100.3
+            c-6.747-19.272-8.15-26.413-8.504-28.383c-1.206-7.074,0.904-14.232,5.754-19.518c4.416-4.81,10.556-7.485,17.006-7.485
+            l1.954,0.081c2.897,0.238,5.532,1.018,7.773,2.003c2.257,0.993,4.161,2.184,5.91,3.505c3.48,2.651,6.467,5.794,9.956,10.251
+            c6.886,8.906,15.775,23.336,28.875,50.47c5.63,11.705,11.195,19.831,15.948,25.067c4.768,5.262,8.593,7.576,10.982,8.537
+            c1.617,0.64,2.626,0.755,3.39,0.763c0.854-0.008,1.462-0.165,2.225-0.501c0.739-0.345,1.592-0.944,2.372-1.798
+            c1.642-1.666,2.496-4.358,2.397-5.228V258.45V101.564c0-12.764,10.35-23.113,23.113-23.113c12.763,0,23.114,10.35,23.114,23.113
+            v133.772h21.939V56.733c0-12.764,10.35-23.113,23.113-23.113c12.764,0,23.114,10.35,23.114,23.113v178.604h19.141V62.339
+            c0-12.764,10.35-23.113,23.114-23.113c12.763,0,23.113,10.35,23.113,23.113v172.998h19.149V107.162
+            c0-12.764,10.35-23.114,23.114-23.114c12.763,0,23.113,10.35,23.113,23.114v224.124c0,0.016,0,1.535,0,5.606
+            c0,1.502,0,3.34,0,5.606c-0.041,14.347-2.971,30.944-9.128,48.542C405.126,452.706,348.024,478.38,293.014,478.38z"/>
+        </g>
+        </svg>
+        </div>
+        <div class="sissor">
+          <?xml version="1.0" encoding="iso-8859-1"?>
+          <svg class="sissorButton" fill="#000000" height="100px" width="100px" version="1.1" id="Sissor" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+            viewBox="0 0 260.245 260.245" xml:space="preserve">
+          <g>
+          <path d="M218.783,146.7c-1.236-12.878-5.72-22.697-13.326-29.186c-5.501-4.693-11.454-6.609-16.23-7.32
+            c-5.591-8.444-13.769-13.598-23.562-14.885c5.629-21.146,15.459-55.701,16.354-58.843c2.831-8.742,1.594-17.433-3.498-24.501
+            C173.204,4.586,164.082,0.001,154.716,0l0,0c-12.251-0.001-22.262,7.448-26.124,19.44c-0.024,0.075-0.048,0.15-0.07,0.227
+            l-15.628,52.014L98.419,26.767C95.085,13.784,84.5,5.425,71.323,5.425c-9.09,0-17.757,4.113-23.186,11.004
+            c-5.28,6.703-7.014,15.275-4.88,24.138l17.863,74.287c-3.947,1.802-7.464,4.343-10.355,7.507c-5.54,6.063-8.716,14.149-9.44,24.034
+            c-1.416,19.325,15.805,46.4,32.837,70.336c0.519,0.729,0.999,1.403,1.41,1.986l2.774,25.312c0.834,9.182,8.646,16.217,17.89,16.217
+            h72.49c9.346,0,17.168-7.123,17.906-16.415l2.224-22.895c0.195-0.277,0.404-0.543,0.626-0.858
+            C203.214,200.585,221.191,171.8,218.783,146.7z M177.047,218.448l-2.37,24.354c-0.21,3.133-2.812,5.443-5.95,5.443h-72.49
+            c-3.115,0-5.705-2.275-5.945-5.381l-2.936-26.854c-0.081-1.047-0.436-2.019-1.029-2.885c-5.529-8.053-34.472-46.233-33.032-65.868
+            c1.178-16.073,10.226-21.171,16.433-22.774c3.161-0.817,5.093-3.992,4.329-7.167L54.924,37.755
+            c-3.014-12.516,6.772-20.331,16.398-20.331c6.758,0,13.438,3.854,15.552,12.64l17.753,55.087c1.313,4.073,4.842,6.099,8.37,6.099
+            c3.589,0,7.177-2.096,8.43-6.266l18.587-61.864C142.527,15.319,148.58,12,154.715,12c9.871,0.001,19.953,8.595,15.829,20.95
+            c0,0-13.245,46.454-18.426,66.731c-0.965,3.773,1.884,7.434,5.688,7.434c0.165,0,0.333-0.008,0.502-0.022
+            c0.771-0.064,1.575-0.102,2.404-0.102c6.445,0,14.411,2.268,19.649,11.707c1.024,1.846,2.895,3.04,5.003,3.153
+            c6.315,0.34,19.341,3.775,21.474,25.995c2.456,25.592-23.516,59.975-28.765,67.637
+            C177.469,216.364,177.119,217.383,177.047,218.448z"/>
+        </g>
+        </svg>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <footer>
+    <h2>Developer by <a target="_blank" href="https://github.com/dudzvs">dudzvs</a></h2>
+  </footer>
 </body>
 </html>
